# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
coverage/: lcov.info
gendiff/: __init__.py  cli.py  file.txt  gendiff.py  generate.py  pars_file.py  stylish.py  testfile.py
gendiff/format/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: __init__.py  test_gendiff.py
