[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andrey Nikel <nikelandrey94@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff" }, ]
classifiers = []
repository = "https://github.com/Nea1o/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
